store (parts) of TemperatureHumidityDevice in database